@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.07-2.03
-Date: 2009-6-2
+Version: 0.07-2.04
+Date: 2009-6-8
 Title: Missing Data Imputation and Model Checking
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
