@@ -1,3 +1,10 @@
+2009-6-8 Yu-Sung Su     <ys463@columbia.edu>  
+   * R/display: display the pooled estimates in the last order.
+   * R/mi.continuous: fix a bug in draws.from.beta ($beta -> $coef)
+   * R/mi.count: fix a bug in draws.from.beta ($beta -> $coef)
+   * R/mi.binary: fix a bug in draws.from.beta ($beta -> $coef)
+
+
 2009-5-4 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.07-2
    * new function: write.mi
